--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Student Details</h1>
+    <img src="https://github.com/Mercy-Karri/Web-Application/blob/main/Process%20html.png">
  <form>
            First Name: <input type="text" name="First name" /><br><br>
            Last Name :<input type="text" name="Last name"/><br><br>
